Fix the recent scrollbar bug (?) of Chrome.

--- a/popup.css
+++ b/popup.css
@@ -1,9 +1,15 @@
-html, body, #container {
+html, body {
   font: 12px "Helvetica Neue", "Lucida Grande", Helvetica, Arial, sans-serif;
-  width: 320px;
   margin: 0px;
   padding: 0px;
   user-select: none;
+  overflow-y: overlay;
+}
+
+#container {
+  width: 320px;
+  margin: 0px;
+  padding: 0px;
 }
 
 #search-container {
@@ -17,7 +23,7 @@ html, body, #container {
 #search-container.sticky {
   position: fixed;
   top: 0;
-  width: calc(100% - 10px);
+  width: calc(100% - 8px);
   background: #fff;
 }
 
